--- a/efficient_capsnet_train.ipynb
+++ b/efficient_capsnet_train.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-28T14:17:38.152068Z",
-     "start_time": "2021-01-28T14:17:38.145241Z"
+     "end_time": "2024-05-09T11:59:49.637236400Z",
+     "start_time": "2024-05-09T11:59:49.594687700Z"
     }
    },
    "outputs": [],
@@ -34,14 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-28T14:17:39.436665Z",
-     "start_time": "2021-01-28T14:17:38.152986Z"
+     "end_time": "2024-05-09T12:00:52.869606100Z",
+     "start_time": "2024-05-09T12:00:48.826614900Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-09 20:00:52.329922: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-05-09 20:00:52.333978: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-09 20:00:52.421391: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-09 20:00:52.422455: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-09 20:00:53.826065: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (dataset.py, line 108)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001B[0;36m(most recent call last)\u001B[0m:\n",
+      "\u001B[0m  File \u001B[1;32m/ssd-data/anaconda3/envs/caps/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3508\u001B[0m in \u001B[1;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001B[0m\n",
+      "\u001B[0m  Cell \u001B[1;32mIn[2], line 2\u001B[0m\n    from utils import Dataset, plotImages, plotWrongImages, plotHistory\u001B[0m\n",
+      "\u001B[0;36m  File \u001B[0;32m/big-data/person/zhaozhonghua/capsnet/utils/__init__.py:3\u001B[0;36m\n\u001B[0;31m    from utils.dataset import Dataset\u001B[0;36m\n",
+      "\u001B[0;36m  File \u001B[0;32m/big-data/person/zhaozhonghua/capsnet/utils/dataset.py:108\u001B[0;36m\u001B[0m\n\u001B[0;31m    def get_tf_data(self):\u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31mIndentationError\u001B[0m\u001B[0;31m:\u001B[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from utils import Dataset, plotImages, plotWrongImages, plotHistory\n",
@@ -50,14 +75,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-28T14:17:39.485046Z",
-     "start_time": "2021-01-28T14:17:39.438120Z"
+     "end_time": "2024-05-09T12:00:58.160723300Z",
+     "start_time": "2024-05-09T12:00:57.840046100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-09 20:01:01.214522: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[3], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m gpus \u001B[38;5;241m=\u001B[39m tf\u001B[38;5;241m.\u001B[39mconfig\u001B[38;5;241m.\u001B[39mexperimental\u001B[38;5;241m.\u001B[39mlist_physical_devices(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGPU\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 2\u001B[0m tf\u001B[38;5;241m.\u001B[39mconfig\u001B[38;5;241m.\u001B[39mexperimental\u001B[38;5;241m.\u001B[39mset_visible_devices(\u001B[43mgpus\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGPU\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      3\u001B[0m tf\u001B[38;5;241m.\u001B[39mconfig\u001B[38;5;241m.\u001B[39mexperimental\u001B[38;5;241m.\u001B[39mset_memory_growth(gpus[\u001B[38;5;241m0\u001B[39m], \u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "tf.config.experimental.set_visible_devices(gpus[0], 'GPU')\n",
@@ -65,12 +110,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-28T14:17:39.502857Z",
-     "start_time": "2021-01-28T14:17:39.486169Z"
+     "end_time": "2024-05-09T12:01:03.568282Z",
+     "start_time": "2024-05-09T12:01:03.482952400Z"
     }
    },
    "outputs": [],
